# medical_wasm

./: Cargo.toml  index.html
.cargo/: config.toml
assets/models/: car.glb
src/: app.rs  build.rs  camera.rs  fpscounter.rs  lib.rs  main.rs  quad.rs  renderer.rs
src/pipelines/: medical_pipeline.rs  mesh_pipeline.rs  mod.rs  raytrace_pipeline.rs  sampletexture_pipeline.rs  triangle.rs  triangle_pipeline.rs
src/pipelines/shaders/: common.wgsl  medical.wgsl  mesh.wgsl  random.wgsl  raytrace.wesl  raytrace.wgsl
