[package]
name = "wgpu_raycaster_new"
version = "0.1.0"
edition = "2021"
build = "src/build.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[build-dependencies]
cfg_aliases = "0.2.1"

[dependencies]
bytemuck = { version = "1.22.0", features = ["derive", "min_const_generics"] }
cgmath = "0.18.0"
gilrs = "0.11.0"
gltf = "1.4.1"
instant = "0.1.13"
nifti = { version = "0.16.0", features = ["ndarray_volumes"] }
pollster = "0.4.0"
wgpu = "25.0.0"
winit = "0.30.9"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wgpu = { version = "25.0.0", features = ["webgl"] }
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}
# codegen-units = 1
# lto = "thin"
